--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  background-color: transparent;
 }
 
 .__btn__rounded {
