--- a/src/components/GameCard/gameCard.module.scss
+++ b/src/components/GameCard/gameCard.module.scss
@@ -47,7 +47,6 @@
       cursor: pointer;
   
       .__start_button_text {
-        text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
         font-family: Poppins;
         font-size: 16px;
         font-weight: bold;
@@ -57,7 +56,8 @@
         letter-spacing: normal;
         text-align: center;
         color: #fb6e00;
-        margin-top: 12px;
+        margin-top: 13px;
+        text-transform: uppercase;
       }
     }
   }
