--- a/src/pages/PowerPoker/pokerHands.module.scss
+++ b/src/pages/PowerPoker/pokerHands.module.scss
@@ -115,6 +115,32 @@
         cursor: pointer;
       }
     }
+
+    .__powers_not_active {
+      font-family: Poppins;
+      font-size: 14px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: center;
+      color: $white;
+      margin-top: 15px;
+    }
+
+    .__power_up {
+      font-weight: 500;
+      color: $primary;
+    }
+
+    .__card_game_footer_btn {
+      border-radius: 12px;
+      width: 368px;
+      height: 56px;
+      font-size: 18px;
+      margin: 24px 0;
+    }
   }
 
   .__card_game_content_footer {
