--- a/src/components/SportsSidebarContent/index.module.scss
+++ b/src/components/SportsSidebarContent/index.module.scss
@@ -21,6 +21,33 @@
 			align-items: center;
 			margin: 6px 0;
 
+			.sidebar_body_value {
+				display: flex;
+				width: 100%;
+				justify-content: space-between;
+				align-items: center;
+
+				span {
+					width: 20px;
+					height: 20px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					border-radius: 50%;
+
+					svg {
+						padding: 0;
+						margin: 0;
+					}
+
+					&:hover {
+						cursor: pointer;
+						box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+						transition: box-shadow ease-in-out 0.2s;
+					}
+				}
+			}
+
 			span {
 				text-transform: uppercase;
 				color: $lightGrey4;
