--- a/src/pages/NHLpowerdFS/index.module.scss
+++ b/src/pages/NHLpowerdFS/index.module.scss
@@ -212,7 +212,7 @@
 					display: flex;
 					flex-direction: row;
 					flex-wrap: wrap;
-					justify-content: space-between;
+					justify-content: space-evenly;
 				}
 			}
 
