--- a/src/components/SportsSelectionCard/index.module.scss
+++ b/src/components/SportsSelectionCard/index.module.scss
@@ -86,43 +86,167 @@
 		}
 	}
 
-	.container_body_card_p {
-		border-left: 3px solid $lightBlue;
-		padding: 0 0 0 10px;
+	.card_state_main_container {
+		display: flex;
+		flex-direction: row;
+		font-family: Poppins;
 
-		&.active {
-			border-color: $primary;
+		&.space_evenly {
+			justify-content: space-evenly;
+			align-items: center;
+		}
+
+		.card_state_left {
+			display: flex;
+			flex-direction: column;
+			padding-top: 20px;
+			font-size: 14px;
+
+			strong {
+				display: flex;
+				flex: 1;
+				font-weight: normal;
+				text-transform: capitalize;
+			}
+		}
+
+		.container_body_card_state {
+			margin: 20px 0;
+			width: 70%;
+
+			&.border {
+				border-left: 3px solid $lightBlue;
+			}
+	
+			&.active {
+				border-color: $primary;
+			}
+	
+			&.card_state_no_data {
+				padding-left: 10px;
+			}
+	
+			.card_state {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-evenly;
+				
+				.card_state_title {
+					display: flex;
+					flex-direction: row;
+					justify-content: space-evenly;
+					
+					span {
+						color: $grey2;
+						font-size: 10px;
+						text-transform: uppercase;
+						opacity: 0.6;
+						text-align: center;
+						flex: 1;
+					}
+
+					.state_step_1_title {
+						font-size: 14px;
+						opacity: 1;
+					}
+				}
+	
+				
+				.card_state_values {
+					display: flex;
+					justify-content: space-evenly;
+					
+					&.column {
+						flex-direction: column;
+					}
+	
+					.card_state_title_1 {
+						display: flex;
+						flex-direction: row;
+						justify-content: space-evenly;
+					}
+	
+					.step_value_1 {
+						flex: 1;
+						margin: 0 10px;
+						display: flex;
+						flex-direction: row;
+						
+						strong {
+							text-align: center;
+							width: 100%;
+						}
+					}
+	
+					.step_value {
+						display: flex;
+						flex-direction: row;
+						justify-content: center;
+						align-items: center;
+						flex: 1;
+						text-align: center;
+						margin: 0 10px;
+
+						.state_step_1_value {
+							font-weight: normal;
+							font-size: 14px;
+							color: $grey2;
+							opacity: 0.6;
+						}
+					}
+				}
+			}
 		}
 	}
 
+	.container_card_footer_main {
+		display: flex;
+		flex-direction: row;
+		align-items: flex-end;
+		justify-content: flex-end;
+
+		.card_footer_left {
+			display: flex;
+			flex-direction: column;
+			flex: 1;
+
+			.container_body_footer {
+				width: 100%;
+				align-self: center;
+				display: flex;
+				justify-content: space-evenly;
+				align-items: center;
+				padding: 0;
+				margin: 0;
+		
+				span {
+					display: flex;
+					font-size: 14px;
+					font-weight: normal;
+					color: $grey2;
+					opacity: 0.6;
+		
+					svg {
+						margin-right: 5px;
+					}
+				}
+			}
+		}
+
+		.card_footer_right {
+			cursor: pointer;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			opacity: 0.6;
+		}
+	}
 	.divider {
 		border: 0.4px solid $divider;
 		opacity: 0.1;
 		padding: 0;
 		margin: 10px auto;
 		width: 95%;
-	}
-
-	.container_body_footer {
-		width: 90%;
-		align-self: center;
-		display: flex;
-		justify-content: space-evenly;
-		align-items: center;
-		padding: 0;
-		margin: 0;
-
-		span {
-			display: flex;
-			font-size: 14px;
-			font-weight: normal;
-			color: $grey2;
-			opacity: 0.6;
-
-			svg {
-				margin-right: 5px;
-			}
-		}
 	}
 
 	.container_body_card_start_power {
