Search filter and filter selection issue fixes

--- a/src/components/SportsFilters/index.module.scss
+++ b/src/components/SportsFilters/index.module.scss
@@ -21,6 +21,10 @@
 		border-radius: 8px;
 		text-transform: uppercase;
 
+		&.selected {
+			background-color: $primary;
+		}
+
 		.tick {
 			display: none;
 		}
