--- a/src/components/SportsSidebarContent/index.module.scss
+++ b/src/components/SportsSidebarContent/index.module.scss
@@ -70,6 +70,7 @@
 				display: flex;
 				flex-direction: row;
 				align-items: center;
+				position: relative;
 
 				svg {
 					margin-right: 8px;
@@ -81,6 +82,12 @@
 					font-weight: normal;
 					text-transform: capitalize;
 					width: 100%;
+				}
+
+				img {
+					position: absolute;
+					transform: translate(-25px, -20px);
+					width: 20px;
 				}
 			}
 		}
