--- a/src/pages/NHLpowerdFS/index.module.scss
+++ b/src/pages/NHLpowerdFS/index.module.scss
@@ -199,12 +199,16 @@
 					background-color: $black2;
 					padding: 10px 40px;
 					border-radius: 9px;
+					align-items: flex-start;
 
 					.container_footer_header_1 {
 						display: flex;
 						flex-direction: row;
 						justify-content: space-between;
+						align-items: flex-start;
 						margin: 20px 0;
+						width: 80%;
+						text-align: left;
 
 						p {
 							display: flex;
@@ -232,6 +236,7 @@
 					.container_footer_body {
 						display: flex;
 						flex-direction: column;
+						width: 100%;
 
 						p {
 							font-size: 14px;
