--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -9,3 +9,15 @@
   padding: 2.5rem;
   border-radius: 14px;
 }
+
+@media (max-width: 414px) {
+  .__card {
+    display: flex;
+    flex-wrap: wrap;
+    flex: auto;
+    flex-direction: column;
+    background-color: $black2;
+    padding: 1.2rem;
+    border-radius: 14px;
+  }
+}
