--- a/src/components/Progress/progressBar.module.scss
+++ b/src/components/Progress/progressBar.module.scss
@@ -30,3 +30,36 @@
   text-anchor: middle;
   fill: $white;
 }
+
+@media (max-width: 414px) {
+  .__svg {
+    display: flex;
+    flex: 1;
+    margin: 10px auto;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 65px;
+  }
+  
+  .__svg_circle_bg {
+    fill: none;
+  }
+  
+  .__svg_circle {
+    fill: none;
+  }
+  
+  .__svg_circle_text {
+    font-size: 12px;
+    text-anchor: middle;
+    fill: $white;
+    font-weight: bold;
+  }
+  
+  .__svg_circle_text_2 {
+    font-size: 10px;
+    text-anchor: middle;
+    fill: $white;
+  }
+}
