--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,6 +3,7 @@ $lightPrimary: #fb6e001a;
 $primaryLight: #fb6e0033;
 $primaryLight2: rgba(251, 110, 0, 0.6);
 $primaryLight3: rgba(251, 110, 0, 0.38);
+$primaryLight4: #e63f2f26;
 $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
