--- a/src/pages/NHLpowerdFS/index.module.scss
+++ b/src/pages/NHLpowerdFS/index.module.scss
@@ -118,6 +118,7 @@
 								border-radius: 0 0 12px 12px;
 								transform: translate(-30px, 5px);
 								font-size: 14px;
+								z-index: 5;
 
 								span {
 									width: 100%;
