--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -35,6 +35,7 @@ $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
 $alertDanger: #e7304e26;
 $danger: #e7304e;
+$danger2: #fa3800;
 $success: #1bbc86;
 $green: #4bb654;
 $yellow: #fbbc15;
