--- a/src/pages/MLBpowerdFS/index.module.scss
+++ b/src/pages/MLBpowerdFS/index.module.scss
@@ -118,6 +118,7 @@
 								border-radius: 0 0 12px 12px;
 								transform: translate(-30px, 5px);
 								font-size: 14px;
+								z-index: 5;
 
 								span {
 									width: 100%;
@@ -199,12 +200,16 @@
 					background-color: $black2;
 					padding: 10px 40px;
 					border-radius: 9px;
+					align-items: flex-start;
 
 					.container_footer_header_1 {
 						display: flex;
 						flex-direction: row;
 						justify-content: space-between;
+						align-items: flex-start;
 						margin: 20px 0;
+						width: 80%;
+						text-align: left;
 
 						p {
 							display: flex;
@@ -232,6 +237,7 @@
 					.container_footer_body {
 						display: flex;
 						flex-direction: column;
+						width: 100%;
 
 						p {
 							font-size: 14px;
